--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4be3a6c4",
+   "id": "c34431aa",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1305caa2",
+   "id": "5ef3e0f5",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3fb20c06",
+   "id": "fc2f093e",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a82cbf4c",
+   "id": "475ea65d",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fda25851",
+   "id": "69d84171",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6abb924e",
+   "id": "0c0c0a79",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1c9dc402",
+   "id": "f2e2dbb9",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "00164517",
+   "id": "95a65a0a",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1c02740",
+   "id": "841f3088",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9229187e",
+   "id": "fc21bbab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d54e8766",
+   "id": "192b1268",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b86cf978",
+   "id": "eab18345",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "81d2ef6d",
+   "id": "1cfd64ba",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "31113f8d",
+   "id": "d6b90906",
    "metadata": {},
    "outputs": [
     {
@@ -292,26 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "ab85d7eb",
+   "execution_count": null,
+   "id": "afb1c858",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a word: taco\n",
-      "Enter an index: 4\n",
-      "4 is too big, and beyond index of taco.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "index = input(\"Enter an index: \")\n",
     "index = int(index)\n",
     "\n",
-    "if numberofindex >= len(word):\n",
+    "if index >= len(word):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
     "else: print(f\"Index {index} of the word {word} is the letter {word[index]}\")"
    ]
@@ -319,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25033077",
+   "id": "5faff37f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -327,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e7b36a",
+   "id": "8db61ce6",
    "metadata": {},
    "outputs": [],
    "source": []
