--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b1f1ad06",
+   "id": "7f703906",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0f462ea6",
+   "id": "8f42a254",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a4dea165",
+   "id": "7426c443",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d617da95",
+   "id": "4fa2eab1",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "73833cde",
+   "id": "1dadd366",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "f4da069a",
+   "id": "a2fe9e64",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0c80a249",
+   "id": "80027389",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "3a60077e",
+   "id": "e89336f4",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "12512ea4",
+   "id": "bfe3c76d",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "70604da0",
+   "id": "3b1f6ec2",
    "metadata": {},
    "outputs": [
     {
@@ -540,16 +540,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "6d6eec27",
+   "execution_count": 115,
+   "id": "4f5e77fd",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a word: pineapple\n",
-      "Enter a number: 5\n"
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2142404546.py, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[115], line 9\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
      ]
     }
    ],
@@ -561,13 +561,15 @@
     "if index < 0:\n",
     "    print('index 5 in \\'pineapple\\' is \\'p\\'')\n",
     "elif index >= len(word):\n",
-    "    print('100 is too big, and beyond the index for pineapple')"
+    "    print('100 is too big, and beyond the index for pineapple')\n",
+    "else:\n",
+    "    print(f')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb3a9a6",
+   "id": "5bfccb56",
    "metadata": {},
    "outputs": [],
    "source": []
