--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "7f703906",
+   "id": "d2ec0921",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8f42a254",
+   "id": "2dc48dc5",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "7426c443",
+   "id": "c2b63503",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4fa2eab1",
+   "id": "6db17391",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1dadd366",
+   "id": "cefa1cca",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "a2fe9e64",
+   "id": "2df81ddb",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "80027389",
+   "id": "a5b3fb2d",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "e89336f4",
+   "id": "089c354b",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "bfe3c76d",
+   "id": "1a0ff8a1",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "3b1f6ec2",
+   "id": "79a733b8",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "4f5e77fd",
+   "id": "c40e4a7f",
    "metadata": {},
    "outputs": [
     {
@@ -563,13 +563,13 @@
     "elif index >= len(word):\n",
     "    print('100 is too big, and beyond the index for pineapple')\n",
     "else:\n",
-    "    print(f')"
+    "    print(f'Index {index} in \"{word}\" is \"{word[i]}\"')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bfccb56",
+   "id": "6b4d3752",
    "metadata": {},
    "outputs": [],
    "source": []
