--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d2ec0921",
+   "id": "43d7ead6",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2dc48dc5",
+   "id": "1c153898",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "c2b63503",
+   "id": "ee4b32eb",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6db17391",
+   "id": "c422c41e",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "cefa1cca",
+   "id": "faa9d39f",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "2df81ddb",
+   "id": "31408fba",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "a5b3fb2d",
+   "id": "e934478a",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "089c354b",
+   "id": "b26bb068",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "1a0ff8a1",
+   "id": "fea0c7ad",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "79a733b8",
+   "id": "2bf38a41",
    "metadata": {},
    "outputs": [
     {
@@ -540,19 +540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "c40e4a7f",
+   "execution_count": null,
+   "id": "b7778e8a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2142404546.py, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[115], line 9\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
@@ -563,13 +554,13 @@
     "elif index >= len(word):\n",
     "    print('100 is too big, and beyond the index for pineapple')\n",
     "else:\n",
-    "    print(f'Index {index} in \"{word}\" is \"{word[i]}\"')"
+    "    print(f'Index {index} in \"{word}\" is \"{word[index]}\"')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4d3752",
+   "id": "894edbb8",
    "metadata": {},
    "outputs": [],
    "source": []
