--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "43d7ead6",
+   "id": "01957ac5",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1c153898",
+   "id": "b56e5f87",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "ee4b32eb",
+   "id": "212ac837",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c422c41e",
+   "id": "8c85b86e",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "faa9d39f",
+   "id": "f44bbfe3",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "31408fba",
+   "id": "c44da264",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "e934478a",
+   "id": "510333c2",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b26bb068",
+   "id": "474f9456",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "fea0c7ad",
+   "id": "e1613ec5",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "2bf38a41",
+   "id": "68fce0f5",
    "metadata": {},
    "outputs": [
     {
@@ -540,10 +540,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7778e8a",
+   "execution_count": 118,
+   "id": "7a0fa55d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: pineapple\n",
+      "Enter a number: -1\n",
+      "index 5 in 'pineapple' is 'p'\n"
+     ]
+    }
+   ],
    "source": [
     "x = 'pineapple'\n",
     "word = input('Enter a word: ')\n",
@@ -560,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "894edbb8",
+   "id": "bfaa59aa",
    "metadata": {},
    "outputs": [],
    "source": []
