--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "01957ac5",
+   "id": "b97d0512",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b56e5f87",
+   "id": "b7bcd77b",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "212ac837",
+   "id": "9c323469",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8c85b86e",
+   "id": "1cbf941d",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f44bbfe3",
+   "id": "dc201eea",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "c44da264",
+   "id": "201e19f8",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "510333c2",
+   "id": "93054f68",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "474f9456",
+   "id": "3287aad1",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e1613ec5",
+   "id": "c3382c2a",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "68fce0f5",
+   "id": "6d252931",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "7a0fa55d",
+   "id": "cda8f787",
    "metadata": {},
    "outputs": [
     {
@@ -569,8 +569,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 120,
+   "id": "e1f66fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bfaa59aa",
+   "id": "0940f4f2",
    "metadata": {},
    "outputs": [],
    "source": []
