--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa086e0",
+   "id": "04190087",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "652bb145",
+   "id": "d767dcf1",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "797d206c",
+   "id": "6ee4d85f",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "502da67e",
+   "id": "6400e953",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "745a4a88",
+   "id": "9509a774",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0f9fb020",
+   "id": "3fdb5285",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "26759189",
+   "id": "c9054a84",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c4bb3c5f",
+   "id": "d1042ba3",
    "metadata": {},
    "outputs": [
     {
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "70b7a5f2",
+   "execution_count": 78,
+   "id": "85a5888d",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,8 @@
      "text": [
       "please enter a textasma\n",
       "please enter a number6\n",
-      "this is too high\n"
+      "this is too high\n",
+      "Try again!2\n"
      ]
     }
    ],
@@ -286,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600b997f",
+   "id": "6f22a7dc",
    "metadata": {},
    "outputs": [],
    "source": []
