--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c34431aa",
+   "id": "a6de634b",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ef3e0f5",
+   "id": "f5a22aab",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fc2f093e",
+   "id": "6d012d75",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "475ea65d",
+   "id": "7cf6324a",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "69d84171",
+   "id": "70a74590",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0c0c0a79",
+   "id": "4de27eb4",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f2e2dbb9",
+   "id": "ab96ea59",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "95a65a0a",
+   "id": "21710649",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841f3088",
+   "id": "3d16d1f4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc21bbab",
+   "id": "f2f33531",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "192b1268",
+   "id": "cbd5e21f",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "eab18345",
+   "id": "e4c3fb60",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1cfd64ba",
+   "id": "544a8099",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "d6b90906",
+   "id": "6acb2fd2",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb1c858",
+   "id": "0f0cc378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,15 +309,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5faff37f",
+   "id": "016fbc85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word = input(\"Enter a word: \")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8db61ce6",
+   "id": "2d076f51",
    "metadata": {},
    "outputs": [],
    "source": []
