--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c992f7f2",
+   "id": "29e3703d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9f6fb9b4",
+   "id": "e4eeec66",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c8ba5b10",
+   "id": "7e157767",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc974095",
+   "id": "f175167c",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1303dd71",
+   "id": "7e7928db",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7511e01e",
+   "id": "325cf297",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "04ecdb0c",
+   "id": "5a030028",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8bb8d511",
+   "id": "95157289",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3503733b",
+   "id": "77075abc",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e371abf2",
+   "id": "f841ca3f",
    "metadata": {},
    "outputs": [
     {
@@ -228,10 +228,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ce8247",
+   "id": "43640dfa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "txt1 = input"
+   ]
   }
  ],
  "metadata": {
