--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0669b568",
+   "id": "06da104a",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "db540178",
+   "id": "6b28d6d7",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "710c0884",
+   "id": "2f259093",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "bfcbb1bd",
+   "id": "ca961686",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "982728cd",
+   "id": "22b8321e",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1089bdd6",
+   "id": "862a9e26",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "57d1fec5",
+   "id": "21e714ed",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "c2dcfd20",
+   "id": "eb68dfb3",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "06a44cf2",
+   "id": "e8183edf",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "0714eea9",
+   "id": "416628e7",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "85074de2",
+   "id": "8d4785bb",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "8c3585ce",
+   "id": "3d1c09f7",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "9c894fce",
+   "id": "1ea12029",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "0f365138",
+   "id": "93bc39fa",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "27a57b5b",
+   "id": "9afd9fe2",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "8ba1389f",
+   "id": "4fc02963",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "20ebad91",
+   "id": "c85d50ef",
    "metadata": {},
    "outputs": [
     {
@@ -697,8 +697,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 127,
+   "id": "985db610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'abcdefghijklmnopqrstuvwxyx'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e420cd8c",
+   "id": "9f8f3229",
    "metadata": {},
    "outputs": [],
    "source": []
