--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "fb2f3def",
+   "id": "4203e0e7",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "500a9c51",
+   "id": "f202227e",
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +206,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3780f32",
+   "id": "f920bf6c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = input('Write a word: ')\n",
+    "if s[0] == 'a' or s[0] == 'e' or s[0] == 'i'"
+   ]
   }
  ],
  "metadata": {
