--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7a3780ba",
+   "id": "28bb5d6e",
    "metadata": {},
    "outputs": [
     {
@@ -214,10 +214,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582dcb82",
+   "id": "615b1ddb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word = input ('Enter a word')"
+   ]
   }
  ],
  "metadata": {
