--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9236c859",
+   "id": "c33d733d",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0bde090d",
+   "id": "787ac958",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2b50912c",
+   "id": "829cbf58",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "492ffadc",
+   "id": "375e354f",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "133c2ee6",
+   "id": "40ed08d5",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b1bb7b4e",
+   "id": "28d4f2c7",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "4e96bf23",
+   "id": "2e4d2373",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "37788397",
+   "id": "4e69cd6b",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2fe2292a",
+   "id": "376b899c",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d92f1f19",
+   "id": "35de7d4a",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "60fc9953",
+   "id": "5af02555",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "a90d81ca",
+   "id": "394619aa",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6f5f813b",
+   "id": "8c5d480f",
    "metadata": {},
    "outputs": [
     {
@@ -317,10 +317,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4266aa5e",
+   "id": "5053afed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w1=computer\n",
+    "w2=pineapple\n",
+    "w3=orange\n",
+    "w4=elephant\n",
+    "w5=papaya\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
