--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04190087",
+   "id": "5813ea56",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d767dcf1",
+   "id": "d5a17524",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6ee4d85f",
+   "id": "6ed7754b",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6400e953",
+   "id": "54f35d4b",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9509a774",
+   "id": "6db7a7c1",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3fdb5285",
+   "id": "ae746139",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c9054a84",
+   "id": "1c224f66",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "d1042ba3",
+   "id": "836dc233",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "85a5888d",
+   "id": "627439a9",
    "metadata": {},
    "outputs": [
     {
@@ -287,10 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f22a7dc",
+   "id": "c02548d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word=input('please enter a word ')\n",
+    "if word[0] == 'a':\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
