--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26c04f07",
+   "id": "0dbcdb67",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b8ee3e4",
+   "id": "e030f216",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a4fb1e",
+   "id": "a29015d4",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26128669",
+   "id": "a3a7666d",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4de2d85f",
+   "id": "a60c8cdd",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "28552d99",
+   "id": "cf797ccf",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "41fad64c",
+   "id": "6358d937",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af3a5cef",
+   "id": "0f5992ba",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e67bd770",
+   "id": "b5e6e43c",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d9a899c8",
+   "id": "0c4a36cf",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "01091316",
+   "id": "b1486c40",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0c72120a",
+   "id": "26ebb817",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ca5c8116",
+   "id": "c0b853b8",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "e552d182",
+   "id": "88218113",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f3499fdb",
+   "id": "5eadf9e3",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6064c017",
+   "id": "636081ee",
    "metadata": {},
    "outputs": [
     {
@@ -360,13 +360,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "id": "20a291fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: asd\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = input('Enter a word: ')\n",
+    "\n",
+    "if w[0] == 'a' OR\n",
+    "    print(w[0])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e2470ff8",
+   "id": "c27f2277",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "w = input('Enter a word: ')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
