--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6de634b",
+   "id": "8fc2b1ed",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f5a22aab",
+   "id": "088a7b0d",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d012d75",
+   "id": "362c4a8e",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7cf6324a",
+   "id": "50e5605d",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "70a74590",
+   "id": "ebfa96a9",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4de27eb4",
+   "id": "5a9e3bf6",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ab96ea59",
+   "id": "4b668e86",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "21710649",
+   "id": "a748134f",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d16d1f4",
+   "id": "4fd03101",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2f33531",
+   "id": "50a77d5f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "cbd5e21f",
+   "id": "7a8aec59",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e4c3fb60",
+   "id": "5e695952",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "544a8099",
+   "id": "6267b5c2",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6acb2fd2",
+   "id": "831c8e7f",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0cc378",
+   "id": "b73ee980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,17 +309,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "016fbc85",
+   "id": "24988b07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "word = input(\"Enter a word: \")"
+    "word = input(\"Enter a word: \")\n",
+    "firstletter = word[0]\n",
+    "print(firstletter)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d076f51",
+   "id": "082d90f6",
    "metadata": {},
    "outputs": [],
    "source": []
