--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "29e3703d",
+   "id": "f379428a",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e4eeec66",
+   "id": "4a8bad43",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7e157767",
+   "id": "ad226a53",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f175167c",
+   "id": "3d0ac89c",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7e7928db",
+   "id": "2333952a",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "325cf297",
+   "id": "64ff37e6",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5a030028",
+   "id": "427d8d28",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "95157289",
+   "id": "6c17d44e",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "77075abc",
+   "id": "b54bc6b9",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f841ca3f",
+   "id": "35d46913",
    "metadata": {},
    "outputs": [
     {
@@ -228,11 +228,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43640dfa",
+   "id": "976182c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "txt1 = input"
+    "txt1 = input('enter the word : ')\n",
+    "if txt[0] == 'a' or txt[0] == 'e' or txt[0] == 'i' or txt[0] == 'o' or txt[0] == 'u' :\n",
+    "    txt1 = txt1 + 'way'"
    ]
   }
  ],
