--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "06da104a",
+   "id": "55ef097f",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6b28d6d7",
+   "id": "7880383b",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2f259093",
+   "id": "b7d389bf",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ca961686",
+   "id": "872d059a",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "22b8321e",
+   "id": "fa388373",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "862a9e26",
+   "id": "9c99a79d",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "21e714ed",
+   "id": "12e1a018",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "eb68dfb3",
+   "id": "424a9ae5",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e8183edf",
+   "id": "7f8eaa2d",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "416628e7",
+   "id": "bbbf0779",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "8d4785bb",
+   "id": "295e6220",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "3d1c09f7",
+   "id": "add16cf2",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "1ea12029",
+   "id": "ccd58955",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "93bc39fa",
+   "id": "780a787f",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "9afd9fe2",
+   "id": "99b4bcdb",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "4fc02963",
+   "id": "3dae96fa",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "c85d50ef",
+   "id": "de7acc0f",
    "metadata": {},
    "outputs": [
     {
@@ -697,18 +697,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "985db610",
+   "execution_count": null,
+   "id": "6b4d20e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = 'abcdefghijklmnopqrstuvwxyx'"
+    "s = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "user = input('Enter a string: ')\n",
+    "s"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f8f3229",
+   "id": "44143df7",
    "metadata": {},
    "outputs": [],
    "source": []
