--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4203e0e7",
+   "id": "e143408d",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f202227e",
+   "id": "dcc8574c",
    "metadata": {},
    "outputs": [
     {
@@ -206,13 +206,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f920bf6c",
+   "id": "4aba2689",
    "metadata": {},
    "outputs": [],
    "source": [
     "s = input('Write a word: ')\n",
-    "if s[0] == 'a' or s[0] == 'e' or s[0] == 'i'"
+    "if s[0] == 'a' or s[0] == 'e' or s[0] == 'i' or s[0] == 'o' or s[0] == 'u':\n",
+    "    s += 'way'\n",
+    "    print(f'Your word in Pig latim would be: {s}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2b66e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
